kube_resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactdeploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rickyreact
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 50%
      maxSurge: 25%
  template:
    metadata:
      labels:
        app: rickyreact
    spec:
      containers:
      - name: myreact
        image: ejb0329/react-app-ci-pipeline:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 300m
      restartPolicy: Always
