kube_resources/load.yaml
apiVersion: v1
kind: Pod
metadata:
  name: heavy-load
spec:
  containers: 
  - name: busybox
    image: busybox
    command: ["/bin/sh"]
    args: ["-c", "while true; do wget -q -O- http://myreactservice:8080; done"]
