kube_resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myreactservice
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: rickyreact
